sample html content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<HTML:5>
+    <HEAD>
+        <SCRIPT>
+            alert("HI!")
+        </SCRIPT>
+    </HEAD>
+<BODY>
+
+</BODY></HTML:5>
 Hello World!
