my first html page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </SCRIPT>
     </HEAD>
 <BODY>
-    Hi!There
-    Welcome to my Html page
+    <p>Hi!There</p>
+    <p>Welcome to my Html page</p>
 </BODY></HTML:5>
 
