--- a/index.html
+++ b/index.html
@@ -7,7 +7,50 @@
 <BODY>
     <p>Hi!There</p>
 
-    
+    <script>
+
+    // Function to calculate the sum of multiples of a or b up to n
+    function calculateSum() {
+      // Get the values of a, b, and n from the input fields
+      const a = parseInt(document.getElementById("a").value);
+      const b = parseInt(document.getElementById("b").value);
+      const n = parseInt(document.getElementById("n").value);
+      
+      // Check if the inputs are valid
+      if (isNaN(a) || isNaN(b) || isNaN(n) || a <= 0 || b <= 0 || n <= 0) {
+        alert("Please enter valid positive integers for a, b, and n.");
+        return;
+      }
+
+      let sum = 0;
+
+      // Loop through all numbers from 1 to n
+      for (let i = 1; i <= n; i++) {
+        // If i is a multiple of a or b, add it to the sum
+        if (i % a === 0 || i % b === 0) {
+          sum += i;
+        }
+      }
+
+      // Alert the user with the result
+      alert("The sum of all multiples of " + a + " or " + b + " up to " + n + " is: " + sum);
+    }
+  </script>
+</head>
+<body>
+  <h1>Sum of Multiples of a or b</h1>
+  
+  <label for="a">Enter a: </label>
+  <input type="number" id="a" name="a"><br><br>
+  
+  <label for="b">Enter b: </label>
+  <input type="number" id="b" name="b"><br><br>
+  
+  <label for="n">Enter n: </label>
+  <input type="number" id="n" name="n"><br><br>
+
+  <button onclick="calculateSum()">Calculate</button>
+
     <p>Welcome to my Html page</p>
 </BODY></HTML:5>
 
