--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML:5>
   <head>
-    <H4>Exercise 3</H4>
+    <h4>Exercise 3</h4>
     <Title>
         sum of all 3 multiples of a, b and n
     </Title>
