--- a/exercise8.html
+++ b/exercise8.html
@@ -1,86 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Basket Testing</title>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            margin-bottom: 20px;
+        }
+        input {
+            padding: 5px;
+        }
+        button {
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h2>shopping cart</h2>
-        <button onclick="addItem()">Add Item</button>
-        <div id="products Section">
-            <div class="product">
-                <span>Apple - 1.5eu</span>
-                <button onclick="addToCart('Apple')">Add</button>
-            </div>
-            <div class="product">
-                <span>Banana - 2.5eu</span>
-                <button onclick="addToCart('Banana')">Add</button>
-            </div>
-            <div class="product">
-                <span>Mango - 3.95eu</span>
-                <button onclick="addToCart('Mango')">Add</button>
-            </div>
-            <button onclick="viewCart()">View Cart</button>
-        </div>
-        <div id="cartSection" class="cart">
-            <ul id="cartItems"></ul>
-            Total: $<span id="basket_price">0</span>
-        </div>
-    </div>
-</body>
-<script>
-class Basket {
-    constructor() {
-        this.items = {};
-    }
-    addItem(product, qty) {
-        if (this.items[product]) {
-            this.items[product] += qty;
-        } else {
-            this.items[product] = qty;
-        }
-    }
+<h1>Test Your Basket</h1>
+<div class="container">
+<label for="product">Product:</label>
+<input type="text" id="product" placeholder="Enter product name">
+</div>
+<div class="container">
+<label for="qty">Quantity:</label>
+<input type="number" id="qty" min="1" placeholder="Enter quantity">
+</div>
+<button onclick="addItemToBasket()">Add Item</button>
  
-    getCost(price) {
-        let totalCost = 0;
-        for (let product in this.items) {
-            if (price[product] !== undefined) {
-                totalCost  += price[product] * this.items[product];
-            }
-        }
-        return totalCost;
-    }
-}
-const basket = new Basket();
-const prices = { Apple: 1.5, Banana: 2.5, Mango: 3.9 };
-document.getElementById("Products Section").style.display = "none";
-document.getElementById("cartSection").style.display = "none";
-document.getElementById("addItem").addEventListener("click", function() {
-    document.getElementById("Products Section").style.display= "block";
-});
-document.getElementById("viewCart").addEventListener("click", function() {
-            document.getElementById("cartSection").style.display = "block";
-            updateCart();
-        });
-        function addToCart (Product, Price) {
-            basket.addItem(product,1);
-        }
-        function updateCart () {
-            let cartList = document.getElementById("cartItems");
-            let totalPriceDisplay = document.getElementById("basket_price");
-            cartList.innerHTML = "";
+    <h3>Items in Basket:</h3>
+<ul id="itemList"></ul>
  
-            for (let product in basket.items) {
-                let li = document.createElement("li");
-                li.textContent = `${product} x ${basket.items[product]} = $${(basket.items[product] * prices[product])}`;
-                cartList.appendChild(li);
+    <h3>Total Cost: $<span id="totalCost">0</span></h3>
+ 
+    <script>
+        class Basket {
+            constructor() {
+                this.items = [];
             }
  
-            totalPriceDisplay.textContent = basket.getCost(prices);
+            addItem(product, qty) {
+                // Add product and quantity to the basket
+                this.items.push({ product, qty });
+            }
+ 
+            getCost(prices) {
+                let totalCost = 0;
+                this.items.forEach(item => {
+                    if (prices[item.product]) {
+                        totalCost += prices[item.product] * item.qty;
+                    } else {
+                        alert(Price for ${item.product} not found.);
+                    }
+                });
+                return totalCost;
+            }
         }
  
+        // Prices of products
+        const prices = {
+            apple: 1.2,
+            banana: 0.5
+        };
+ 
+        // Create a new basket instance
+        const basket = new Basket();
+ 
+        function addItemToBasket() {
+            const product = document.getElementById('product').value;
+            const qty = document.getElementById('qty').value;
+ 
+            if (!product || !qty) {
+                alert('Please enter both product and quantity!');
+                return;
+            }
+ 
+            // Add item to the basket
+            basket.addItem(product, parseInt(qty));
+ 
+            // Update the UI
+            updateItemList();
+            updateTotalCost();
+        }
+ 
+        function updateItemList() {
+            const itemList = document.getElementById('itemList');
+            itemList.innerHTML = '';  // Clear the current list
+ 
+            basket.items.forEach(item => {
+                const listItem = document.createElement('li');
+                listItem.textContent = ${item.qty} x ${item.product};
+                itemList.appendChild(listItem);
+            });
+        }
+ 
+        function updateTotalCost() {
+            const totalCost = basket.getCost(prices);
+            document.getElementById('totalCost').textContent = totalCost.toFixed(2);
+        }
 </script>
+</body>
 </html>
