--- a/exercise8.html
+++ b/exercise8.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Basket Testing</title>
-<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basket Testing</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -19,22 +19,22 @@
             padding: 5px 10px;
             cursor: pointer;
         }
-</style>
+    </style>
 </head>
 <body>
-<h1>Test Your Basket</h1>
-<div class="container">
-<label for="product">Product:</label>
-<input type="text" id="product" placeholder="Enter product name">
-</div>
-<div class="container">
-<label for="qty">Quantity:</label>
-<input type="number" id="qty" min="1" placeholder="Enter quantity">
-</div>
-<button onclick="addItemToBasket()">Add Item</button>
+    <h1>Test Your Basket</h1>
+    <div class="container">
+        <label for="product">Product:</label>
+        <input type="text" id="product" placeholder="Enter product name">
+    </div>
+    <div class="container">
+        <label for="qty">Quantity:</label>
+        <input type="number" id="qty" min="1" placeholder="Enter quantity">
+    </div>
+    <button onclick="addItemToBasket()">Add Item</button>
  
     <h3>Items in Basket:</h3>
-<ul id="itemList"></ul>
+    <ul id="itemList"></ul>
  
     <h3>Total Cost: $<span id="totalCost">0</span></h3>
  
@@ -55,7 +55,7 @@
                     if (prices[item.product]) {
                         totalCost += prices[item.product] * item.qty;
                     } else {
-                        alert(Price for ${item.product} not found.);
+                        alert(`Price for ${item.product} not found`);
                     }
                 });
                 return totalCost;
@@ -94,7 +94,7 @@
  
             basket.items.forEach(item => {
                 const listItem = document.createElement('li');
-                listItem.textContent = ${item.qty} x ${item.product};
+                listItem.textContent = `${item.qty} x ${item.product}`;
                 itemList.appendChild(listItem);
             });
         }
@@ -103,6 +103,7 @@
             const totalCost = basket.getCost(prices);
             document.getElementById('totalCost').textContent = totalCost.toFixed(2);
         }
-</script>
+    </script>
 </body>
 </html>
+has context menu
