--- a/self learning js/index.html
+++ b/self learning js/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h2>Welcome!</h2>
-    alert("hello");
+    <script>
+        alert("hello");
+    </script>
+    
 </body>
 </html>
